--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
