--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.19.3",
     "dotenv": "^16.4.5",
     "firebase": "^10.7.2",
     "react": "^18.3.1",
